# autoclaude-api

./: .editorconfig  .gitignore  CLAUDE.md  MANIFEST.md  README.md  export.config.yaml  pyproject.toml
brands/_template/: brand.md
brands/forge/: brand.md
catalog/: README.md  anapedia.md  anaplan-formula-reviewer-skill.md  anaplan-hierarchy-auditor-skill.md  anaplan-module-spec-generator-prompt.md  anaplan-test-case-generator-prompt.md  anthropic-on-aws.md  anthropic.md  anthropics-claude-plugins-official.md  apple-foundation-models.md  claude-api-fundamentals-course.md  claude-code-daily-driver-setup.md  claude-cookbooks.md  claude-plugin-supabase.md  rotunda-browser-for-agents.md  show-hn-skills-for-humanity-171-structured-reasoning-skills--s4h-logic-check.md  skills-for-humanity-s4h.md  supabase-community-claude-plugin.md  supabase-mcp.md  supabase-postgres-best-practices-skill.md  supabase-skill.md  supabase.md  use-the-claude-agent-sdk-with-your-claude-plan.md
catalog/_examples/: README.md  example-agent.md  example-article.md  example-repo.md  example-skill.md
catalog/_schema/: README.md  asset.schema.md  notes-from-phase-1.md
catalog/templates/: anaplan-cutover-plan-template.md  anaplan-data-hub-spec-template.md  anaplan-frd-template.md  anaplan-hierarchy-design-template.md  anaplan-integration-spec-template.md  anaplan-model-design-spec-template.md  anaplan-status-report-template.md  anaplan-test-plan-template.md  anaplan-training-deck-template.md
claude/: README.md
claude/agents/: README.md
claude/mcp/: README.md
claude/playbooks/: README.md
claude/plugins/: README.md
claude/prompts/: README.md
claude/skills/: README.md
clients/_template/: README.md
command-center/: README.md
command-center/runbooks/: README.md  content-management.md  scout-review.md  setup.md  static-export.md  web-app.md
command-center/threads/: README.md
command-center/token-burn/: README.md
command-center/token-burn/reports/: README.md
consulting/: README.md
consulting/case-studies/: README.md
consulting/engagements/: README.md
consulting/engagements/_template/: README.md  retro.md  scoping.md
consulting/methodologies/: README.md  anaplan-delivery.md  delivery.md
consulting/methodologies/templates/: README.md  proposal.md
consulting/offers/: README.md
consulting/positioning/: README.md
consulting/pricing/: README.md
consulting/templates/: README.md
conventions/: README.md  contribution.md  deliverable-types.md  delivery-functions.md  frontmatter.md  kinds.md  merge-rules.md  naming.md  security.md  testing.md  web-app.md
docs/plans/: README.md  company-edition.md  phase-3-model-and-effort-recommendation.md  phase-3-scout-v2-security.md  phase-4-repo-extractor.md  phase-5-x-twitter.md  phase-6-merge-dedup.md  phase-7-observability.md  phase-8-2-persistent-index.md  phase-8-3-dogfood-findings.md  phase-8-3-frontend-dogfood-findings.md  phase-8-3-hardening-findings.md  phase-8-3-hardening.md  phase-8-3-write-back.md  phase-8-3b-triage-frontend.md  phase-8-web-command-center.md  phase-9-0-reviewer-agent.md
docs/plans/session_prompts/: phase-3-completion.done.md  phase-3-completion.md  phase-4-repo-extractor.done.md  phase-4-repo-extractor.md  phase-5-x-twitter.done.md  phase-6-merge-dedup.done.md  phase-7-observability.done.md  (+6 more)
docs/runbooks/: README.md  scout-run.md
profiles/: README.md  anaplan-build.yaml  client-share.yaml  internal.yaml
scout/: README.md  __init__.py  _container.py  _security.py  _util.py
scout/agent/: README.md  cli.py  runner.py  types.py
scout/clone_runner/: Dockerfile  README.md  entrypoint.sh
scout/dedup/: __init__.py  archive.py  engine.py  fingerprint.py  overlap.py
scout/doctor/: __init__.py  checks.py
scout/extractors/: README.md  awesome_list.py  base.py  hackernews.py  lobsters.py  reddit.py  repo.py  x.py
scout/liveness/: __init__.py  check.py
scout/queue/: README.md  _template.md
scout/report/: __init__.py  aggregate.py  render.py
scout/reviewer/: __init__.py  agent.py  budget.py  cli.py  context.py  eval.py  pricing.yaml  prompt.py  runner.py  schema.py
scout/sources/: README.md  awesome-lists.yaml  hackernews.yaml  lobsters.yaml  reddit.yaml  x-handles.yaml
scout/state/: README.md
tests/: conftest.py  test_awesome_list_extractor.py
tests/fixtures/: README.md  hn-search-results.json  lobsters-rss.xml  reddit-new.json
tests/integration/: conftest.py  test_repo_extract_e2e.py  test_report_end_to_end.py  test_run_once.py  test_run_once_with_dedup.py  test_run_once_with_liveness.py
tests/unit/: test_awesome_list_extractor.py  test_container_wrapper.py  test_dedup_archive.py  test_dedup_identity.py  test_dedup_oscillation.py  test_dedup_overlap.py  test_dedup_proposals.py  test_doctor_checks.py  test_hackernews_extractor.py  test_liveness_check.py  test_lobsters_extractor.py  test_manifest.py  test_reddit_extractor.py  test_repo_extractor_fingerprint.py  test_repo_extractor_paths.py  test_repo_extractor_slugs.py  test_report_aggregate.py  test_report_render.py  test_runner_dedup.py  test_runner_helpers.py  test_security.py  test_util.py  test_x_extractor_deferred.py
timelines/: README.md  _template.md  forge-roadmap.md  skill-adoption-roadmap.md
tools/: README.md  __init__.py  doctor.py  export_static.py  index.py  manifest.py  web.py
web/: README.md
web/migrations/: alembic.ini  env.py  script.py.mako
(+146 files in other folders)
