[project]
name = "autoclaude"
version = "0.1.0"
description = "Command and control center for an agentic consulting & software-delivery practice."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Matthew Mule" }]

dependencies = [
  "defusedxml>=0.7",
  "httpx>=0.27",
  "pydantic>=2.6",
  "pyyaml>=6.0",
]

[project.scripts]
scout = "scout.agent.cli:main"
manifest = "tools.manifest:main"

# PEP 735 dependency groups. `uv sync` installs the runtime deps + the `dev`
# group by default; `uv sync --no-dev` skips the group for a slim runtime
# install. Add more groups (`docs`, `bench`, ...) as needs appear.
[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["scout", "scout.agent", "scout.extractors", "tools"]

[tool.uv]
# Default groups installed by `uv sync` (in addition to runtime deps).
default-groups = ["dev"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
# Declared so `pytest --strict-markers` doesn't warn. The integration marker
# is auto-applied to anything under tests/integration/ via that dir's conftest.
markers = [
  "integration: end-to-end tests that exercise the runner against an isolated filesystem.",
]
