[project]
name = "ft_autoclaude"
version = "0.1.0"
description = "FT-AutoClaude — an Agentic Solutions Marketplace for Finance Transformation consulting."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Matthew Mule" }]

dependencies = [
  "defusedxml>=0.7",
  "httpx>=0.27",
  "pydantic>=2.6",
  "pyyaml>=6.0",
]

[project.scripts]
scout = "scout.agent.cli:main"
manifest = "tools.manifest:main"
ft-autoclaude-api = "tools.web:main"
ft-autoclaude-index = "tools.index:main"
ft-autoclaude-export-static = "tools.export_static:main"
ft-autoclaude-doctor = "tools.doctor:main"

# PEP 735 dependency groups. `uv sync` installs the runtime deps + the `dev`
# group by default; `uv sync --no-dev` skips the group for a slim runtime
# install. Add more groups (`docs`, `bench`, ...) as needs appear.
#
# `web` holds the FastAPI/uvicorn deps for the Phase 8 web command center.
# `uv sync --group web` brings them in; headless scout users skip them.
[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  # Web deps included in dev so the test suite (which exercises the FastAPI
  # routers) installs them by default.
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "httpx>=0.27",   # FastAPI TestClient transitively depends on this; already in runtime.
  # 8.2 persistent index — SQLAlchemy + Alembic. Tests exercise the sync
  # engine and migrations, so dev needs them as well as `web`.
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "anthropic>=0.40",
]
web = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
]
# Phase 9.0 reviewer agent. Install with: uv sync --group reviewer
# Headless scout runs and web-only deploys don't need this group.
reviewer = [
  "anthropic>=0.40",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
  "scout",
  "scout.agent",
  "scout.extractors",
  "scout.reviewer",
  "tools",
  "web",
  "web.apps",
  "web.apps.api",
  "web.apps.api.db",
  "web.apps.api.routers",
]

[tool.uv]
# Default groups installed by `uv sync` (in addition to runtime deps).
default-groups = ["dev"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
  # Don't lint the web frontend's node_modules even when present locally.
  "web/apps/web/node_modules",
  "web/apps/web/.next",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
# B008: `Depends(...)` / `Query(...)` in argument defaults is the canonical
# FastAPI route signature. Suppressing here is preferable to littering route
# handlers with `# noqa: B008`.
ignore = ["B008", "SIM117"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
# Declared so `pytest --strict-markers` doesn't warn. The integration marker
# is auto-applied to anything under tests/integration/ via that dir's conftest.
markers = [
  "integration: end-to-end tests that exercise the runner against an isolated filesystem.",
]
